mozreview: fix vertical alignment of reviewers (bug 1278579); r=davidwalsh
Change the display of the reviwer spans to match the status div, so they are
aligned vertically.

MozReview-Commit-ID: F5rDFtksnKE

--HG--
extra : rebase_source : 15f2c5e9536e68934b53850b93344389510009ae

--- a/pylib/mozreview/mozreview/static/mozreview/css/commits.less
+++ b/pylib/mozreview/mozreview/static/mozreview/css/commits.less
@@ -78,6 +78,7 @@
 
       & .reviewer-name {
         min-height: 10px;
+        display: inline-block;
 
         &.reviewer-ship-it {
           background-color: @approval-bg;
